crates/brokkr-cli/src/tui/snapshots/run_stopped_panel_80x20.snap
---
source: crates/brokkr-cli/src/tui/snapshot_tests.rs
---
"┌graph─────────────────────────────────────────────────────────[ ∙ ∙ ⏺ BROKKR ]┐"
"│ ╭───────────────────╮                                                        │"
"│ │ ┌─∙ security────┐ │                                                        │"
"│ │ ┤───────────────├ │                                                        │"
"│ │ └─∙ correctness─┘ │                                                        │"
"│ │      ▸review      │                                                        │"
"│ ╰───────────────────╯                                                        │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌seats─────────────────────────────────────────────────────────────────────────┐"
"│participant        status  attempt turns cost tokens model boundary activity  │"
"│review             working 1       Σ 2   —    —      —     —        2 members │"
"│review:security    working 1       1     —    —      —     —        Grep      │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌trail─────────────────────────────────────────────────────────────────────────┐"
"│2  phase/entered  review                                                      │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"runs · run run-stopped · phase review                                           "
"←→ rail · ↑↓ lanes · Enter scope phase · Tab pane · Esc back · / filter · r refr"
